# dilawars.me

./: Makefile  README.md  cron.sh  dilawars_me.toml  disqus.js  docker-compose.yml  gtags.js  my_site.toml  pyproject.toml
docker/: Dockerfile
loconotion/: __main__.py
loconotion/modules/: conditions.py  notionparser.py
