[tool.poetry]
name = "loconotion"
version = "0.2.0"
description = "Turn Notion pages into lightweight, customizable static websites"
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.scripts]
loconotion = "loconotion.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9"
colorama = "^0.4"
cssutils = "^2.6"
requests = "^2.28"
selenium = "^4.8"
toml = "^0.10"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
black = "^23.1"
pytest = "^7.2"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
